# tordbot

./: .gitmodules  CMakeLists.txt  README.MD
include/: bot.hpp  util.hpp
src/: bot.cxx  main.cxx
